fix: the footer on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -515,6 +515,42 @@ a {
     max-width: 500px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
+
+  .footer {
+    background: var(--black);
+    height: 450px;
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    border: 2px solid red;
+  }
+
+  .footer-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 50px 0 20px;
+  }
+
+  .footer-social {
+    width: 380px;
+    display: flex;
+    position: absolute;
+    margin-top: 300px;
+    border: 2px solid red;
+  }
+
+  .menu-bottom {
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
+
+  .attribution {
+    width: 450px;
+    margin-top: 50px;
+  }
 }
 
 /* at the final delete all the repeated code on small devices */
